--- a/docs/modules/getting-started/pages/quick-start.adoc
+++ b/docs/modules/getting-started/pages/quick-start.adoc
@@ -32,7 +32,7 @@ Install JPAStreamer by adding the following dependency in the project's pom.xml-
 === Gradle
 Install JPAStreamer by adding the following dependency in the project's gradle.build-file:
 
-[source]
+[source, text]
 ----
 repositories {
 	mavenCentral()
