--- a/docs/modules/getting-started/pages/installation.adoc
+++ b/docs/modules/getting-started/pages/installation.adoc
@@ -26,7 +26,7 @@ In Maven, the follwing JPAStreamer dependency is added to the project's pom.xml-
 == Gradle
 In Gradle, the following JPAStreamer dependency is added to the project's gradle.build-file:
 
-[source]
+[source, text]
 ----
 repositories {
 	mavenCentral()
