--- a/docs/modules/getting-started/pages/installation.adoc
+++ b/docs/modules/getting-started/pages/installation.adoc
@@ -5,12 +5,12 @@ author: Per Minborg
 :navtitle: Installation
 :source-highlighter: highlight.js
 
-Since JPAStreamer acts merely as an API extension for any existing JPA provider it requires minimal installation and configuration efforts. You simply need to specify that the JPAStreamer dependency is required to compile your source code. Below is a description of how that is done in Maven and Gradle respectively.
+Since JPAStreamer acts merely as an API extension for any existing JPA provider it requires minimal installation and configuration efforts. You only need to specify that the JPAStreamer dependency is required to compile your source code. Below is a description of how that is done in Maven and Gradle respectively.
 
 NOTE: JPAStreamer requires use of Java 8 or later.
 
 == Maven
-In Maven, the follwing JPAStreamer dependency is added to the project's pom.xml-file.
+In Maven, the following JPAStreamer dependency is added to the project's pom.xml-file:
 
 [source, xml]
 ----
