--- a/docs/modules/get-jpa-streamer/pages/spring_integration.adoc
+++ b/docs/modules/get-jpa-streamer/pages/spring_integration.adoc
@@ -4,17 +4,14 @@ author:
 :reftext:  Spring Integration
 :navtitle:  Spring Integration
 :source-highlighter: highlight.js
-JPAStreamer comes with first-party support for projects built on top of Spring Boot. Dependency Injection is a fundamental feature of the Spring framework. With this in mind, a JPAStreamer autoconfiguration module can be used to quickly and easily integrate JPAStreamer into your Spring Boot projects.
-
-. <<Installing the autoconfiguration module>>
-. <<Accessing JPAStreamer>>
+JPAstreamer comes with first-party support for projects built on top of Spring Boot. Dependency Injection is a fundamental feature of the Spring framework. With this in mind, a JPAstreamer autoconfiguration module can be used to quickly and easily integrate JPAstreamer into your Spring Boot projects.
 
 == Installing the autoconfiguration module
 
 The installation process will differ depending on the build tool you're using. In this guide, Maven and Gradle are covered.
 
 === Maven
-For Maven projects, the following JPAStreamer dependency must be added to the project's pom.xml file:
+For Maven projects, the following JPAstreamer dependency must be added to the project's pom.xml file:
 
 [source, xml]
 ----
@@ -28,7 +25,7 @@ For Maven projects, the following JPAStreamer dependency must be added to the pr
 ----
 
 === Gradle
-For Gradle projects, the following JPAStreamer dependency must be added to the project's build.gradle file:
+For Gradle projects, the following JPAstreamer dependency must be added to the project's build.gradle file:
 
 [source, groovy]
 ----
@@ -41,7 +38,7 @@ dependencies {
 }
 ----
 
-== Accessing JPAStreamer
+== Accessing JPAstreamer
 
 Once the required dependencies are installed, you can access JPAStreamer using Spring's Dependency Injection system:
 
@@ -71,4 +68,4 @@ public class DummyService {
 }
 ----
 
-WARNING: JPAStreamer's autoconfiguration relies on a EntityManagerFactory bean being present. If you're using Spring Data JPA, this is already handled for you.
+WARNING: JPAstreamer's autoconfiguration relies on a `EntityManagerFactory` bean being present. If you're using Spring Data JPA, this is already handled for you.
