--- a/docs/modules/introduction/pages/introduction.adoc
+++ b/docs/modules/introduction/pages/introduction.adoc
@@ -1,15 +1,14 @@
-= Introduction
+= JPAstreamer Documentation
 keywords: stream, jpastreamer, java
 author: Per Minborg
 :reftext: Introduction
 :navtitle: Introduction
 :source-highlighter: highlight.js
 
-This chapter provides an overview of the JPAStreamer toolkit and its abilities.
+[discrete.tagline]
+=== An Open Source Library to Instantly Process Data as Java Streams
 
-== What is JPAStreamer?
-
-JPA Streamer is a lightweight extension for any JPA provider that allows creation of Java Streams from database content. With a single dependency, your application can immediately operate on database elements using standard Stream operators e.g. filter(), sort() and map().
+JPAstreamer is a library for expressing JPA/Hibernate/Spring queries using standard Java Streams. With a single dependency, your application can immediately operate on database elements using standard Stream operators e.g. filter(), sort() and map(). As a result, your queries are more expressive, intuitive and less error-prone.
 
 For example, starting with a standard JPA Entity you can effortlessly derive intuitive stream queries:
 
@@ -39,7 +38,7 @@ To operate on the elements of the table, JPAStreamer is first initialized with a
 [source, java]
 ----
 JPAStreamer jpaStreamer = JPAStreamer.createJPAStreamerBuilder("sakila")
-.build();
+    .build();
 ----
 
 The obtained streamer is then used to create Streams that are rendered to database queries through JPA. For example:
@@ -47,19 +46,47 @@ The obtained streamer is then used to create Streams that are rendered to databa
 [source, java]
 ----
 jpaStreamer.stream(Film.class)
-    .filter(Film$.rating.equal("G")) #<1>
+    .filter(Film$.rating.equal("G"))
     .sorted(Film$.length.reversed().thenComparing(Film$.title.comparator())) #<1>
     .skip(10)
     .limit(5)
     .forEach(System.out::println);
 ----
-<1> Film$ is automatically generated from the Film-table Entity at compile-time by JPAStreamer.
-
 This will print films rated G in reversed length order (where films of equal length will be in title order) but skipping the first ten and then printing only the following five films.
+
+
+NOTE: Film$ is automatically generated from the Film-table entity at compile-time by JPAStreamer as part of its metamodel.
 
 TIP: More examples are available in the chapter xref:fetching-data:stream-examples.adoc[Stream Examples].
 
-Using JPAStreamer, you can quickly create modern and robust web application. All components are pre-tested and work in all major browsers (see Compatibility and Versioning or the release notes). This allows you to spend your development time on your application, not testing with a large combination of different devices, browsers, and operating systems. When you do want to create tests, Vaadin has got you covered with a purpose-built tool, Vaadin TestBench.
+== How JPA streamer fits into your application
+JPAstreamer is a library that is added to enrich the API of the underlying JPA provider. It does not impact the existing application code and there is no need to replace any software components. Below is an overview of a typical database application leveraging JPAstreamer.
+
+.JPAstreamer enriches the API of any JPA provider to include new means of expressing queries.
+[#img-architecture]
+[caption=""]
+image::jpa-streamer-architecture.png[JPAstreamer Architecture, 300, role="right"]
+
+*Application Code*
+
+The API is extended to include Java Streams as a way of writing type-safe queries. This means the application code typically consists of a combination of regular JPA queries and Stream pipelines. As a result, developers are free to choose a more expressive, intuitive and less error-prone way of fetching data.
+
+*JPAstreamer*
+
+JPAstreamer is added as a lightweight dependency to the Maven/Gradle build. It integrates with the JPA layer by rendering the Stream queries to JPA and passing them to the underlying JPA provider for execution.
+
+*JPA Layer*
+
+JPAstreamer can integrate with any existing JPA provider. The JPA layer remains responsible for the persisting and reading of objects in the database.
+
+*JDBC (SQL) Layer and Relational Database*
+
+Since the JPA provider is responsible for the database connection (most often) via JDBC, any database compatible with the chosen JPA provider can be used with JPAstreamer.
+
+== Where to begin
+If this is your first time getting to know JPAstreamer, you may want to know xref:why-jpastreamer:why-jpastreamer.adoc[Why JPAstreamer] is a great addition to your database application and xref:how-it-works:how-it-works.adoc[How JPAstreamer Works]. After becoming familiar with the main concepts, you can follow the xref:quick-start:quick-start.adoc[Quick-start Guide] to get set up in minutes.
+
+If you wish to learn more about the Java Stream API, start with the chapter xref:stream-fundamentals:stream_basics.adoc[Stream Fundamentals].
 
 == Resources
 
@@ -69,5 +96,4 @@ Using JPAStreamer, you can quickly create modern and robust web application. All
 
 == Phone Home
 JPAstreamer sends certain data back to Speedment's servers as described link:https://github.com/speedment/jpa-streamer/blob/master/DISCLAIMER.MD[here]. If you wish to disable this feature, please contact us at info@jpastreamer.org.
-
 
