--- a/docs/modules/stream-fundamentals/nav.adoc
+++ b/docs/modules/stream-fundamentals/nav.adoc
@@ -1,5 +1,5 @@
 * Stream Fundamentals
-** xref:stream_basics.adoc[Stream Basics?]
+** xref:stream_basics.adoc[Stream Basics]
 ** xref:intermediate_operations.adoc[Intermediate Operations]
 ** xref:terminal_operations.adoc[Terminal Operations]
 ** xref:other_operations.adoc[Other Operations]
