docs: Fix broken nav.adoc

--- a/docs/modules/how-it-works/nav.adoc
+++ b/docs/modules/how-it-works/nav.adoc
@@ -1,71 +1,1 @@
-
-More than anything, JPAstreamer is a library to simplify the data fetching from any data source connected by the JPA provider. To accomplish this, JPAstreamer needs awareness of the existing database configuration, access to a JPAstreamer instance and a metamodel to allow the formation of predicates as input for the Streams. This chapter describes these elements:
-
-- <<Describing the persistence unit>>
-- <<Obtaining a JPAstreamer instance>>
-- <<The JPAstreamer metamodel>>
-
-== Describing the persistence unit
-Assuming you are already using a JPA provider, your project should contain an XML-file like the one below, describing the persistence unit.
-
-[source, xml]
-----
-<?xml version="1.0" encoding="UTF-8"?>
-<persistence version="2.2"
-             xmlns="http://xmlns.jcp.org/xml/ns/persistence"
-             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-             xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/persistence
-     http://xmlns.jcp.org/xml/ns/persistence/persistence_2_2.xsd">
-
-    <persistence-unit name="sakila" transaction-type="RESOURCE_LOCAL"> #<1>
-        <description>MySQL Sakila Example Database</description>
-        <provider>org.hibernate.jpa.HibernatePersistenceProvider</provider>
-        <properties>
-            <!-- Configuring The Database Connection Details -->
-            <property name="javax.persistence.jdbc.driver" value="com.mysql.cj.jdbc.Driver" />
-            <property name="javax.persistence.jdbc.url" value="jdbc:mysql://localhost:3306/sakila" />
-
-            <!-- ... -->
-
-        </properties>
-    </persistence-unit>
-</persistence>
-----
-<1> The name of the persistence unit, in this case "sakila", is used to initialize JPAstreamer.
-
-JPAstreamer does not need any additional configuration and depends solely on this file to establish a database connection. If your starting a project from scratch, make sure to set up your JPA project before trying to use JPAstreamer.
-
-IMPORTANT: This configuration is just an example configuration for the https://dev.mysql.com/doc/sakila/en/[MySQL Sakila example database]. You should use the configuration you already have in place.
-
-== Obtaining a JPAstreamer instance
-JPAstreamer is initialized using a builder that takes the name of the persistence unit as a parameter.
-
-[source, java]
-----
-JPAStreamer jpaStreamer = JPAStreamer.createJPAStreamerBuilder("sakila") #<1>
-    .build();
-----
-<1> "sakila" is to be replaced with the name of *your* persistence unit that can be found in a configuration-file like the one above
-
-TIP: If you have multiple persistence units, you can initiate several instances of `JPAStreamer` to establish connections with different sources.
-
-== The JPAstreamer metamodel
-As you may recognize from the many examples throughout this guide, JPAstreamer makes heavy use of fields associated with classes named according to the pattern `Foo$`. For instance:
-
-[soruce, java]
-----
-long nrOfFilmsStartingWithA = jpaStreamer.stream(Film.class)
-    .filter(Film$.title.startsWith("A")) "<1>
-    .count();
-----
-#<1> Film$ is part of the JPAstreamer metamodel
-
-The metamodel exists for JPAstreamer to be able to optimize how Streams are rendered to JPA.
-
-The dollar sign indicates that `Film$` is part of the generated static metamodel that is needed by JPAstreamer for the type-safe Stream parameters. The complete metamodel is automatically generated from the existing beans annotated with `@Entity` at compile-time and stored in the projects target-folder. An entity-bean named `Employee` will have a corresponding generated class named `Employee$`.
-
-The chapter xref:predicates:predicates.adoc[JPAstreamer Predicates] describes in greater detail how the metamodel is used.
-
-NOTE: The JPAstreamer metamodel does not need to be checked-in with your source code, nor needs testing.
-
-== Shortcutting Streams operations for optimized performance
+* xref:how-it-works.adoc[How JPAstreamer Works]
